engine/include/engine.h

// ─── Lifecycle ────────────────────────────────────────────────

int engine_init(const char *db_path);
void engine_shutdown();
// ─── FFI binding status (L3 fix) ───────────────────────────────
// The Rust MCP server (server/src/ffi/mod.rs) binds a subset of the FFI
// functions declared in this header; the rest are legacy / CLI-oriented
// entry points that are NOT called by the server. They are declared here
// for completeness and are kept (not removed) because some are used by
// scripts or a future CLI, but they must NOT be treated as server-backed
// APIs. Functions NOT bound by the server include:
//   engine_get_hotspots, engine_get_module_map,
//   engine_get_entry_points, engine_trace_call_chain, engine_get_callers,
//   engine_get_callees, engine_get_complexity, engine_get_capabilities,
//   engine_get_index_progress, engine_scan_project, engine_search_semantic,
//   engine_get_project_overview, engine_get_enhancement_status,
//   engine_build_context, engine_locate_node, engine_index_batch,
//   engine_get_project_info, engine_export_artifact, engine_import_artifact.

// ─── Project ──────────────────────────────────────────────────

uint64_t engine_create_project(const char *root_path, const char *name);
// ─── Parsing & Indexing ───────────────────────────────────────

// Parse one file and build IR + graph; returns JSON status {"ok": true/false, "error": "..."}
char *engine_index_file(uint64_t project_id, const char *file_path);
// Index an entire directory recursively; returns JSON progress summary
char *engine_index_project(uint64_t project_id, const char *dir_path,
			   const char *language_filter);
// ─── Queries ──────────────────────────────────────────────────

char *engine_find_definition(uint64_t project_id, const char *symbol_name,
			     const char *file_filter);
char *engine_find_references(uint64_t project_id, const char *symbol_name,
			     const char *file_filter);
char *engine_get_graph_stats(uint64_t project_id);
// ─── Interactive exploration ──────────────────────────────────
// Explore a function's callers/callees recursively as a JSON tree.
// Returns hierarchical JSON: {"name":"...","file":"...","line":N,"callers":[...],"callees":[...]}
// @param function_name Starting function.
// @param depth How many levels to recurse (max 5).
// @param direction "callers", "callees", or "both".
char *engine_explore_function(uint64_t project_id, const char *function_name,
			      int depth, const char *direction);
// Get the latest project ID from the database.
// Returns the project with the most indexed data (graph_nodes),
// not just the highest id. This prevents project_id misalignment
// when an empty "shell" project has a higher id than the data-bearing
// project. Returns 0 if no projects exist.
uint64_t engine_get_latest_project_id();
// ─── Full-text search ──────────────────────────────────────────

// Search code by name or content using FTS5; returns JSON with matching nodes
char *engine_search_code(uint64_t project_id, const char *query, int limit);
// Build FTS index from graph data (async, non-blocking for graph queries)
char *engine_build_fts(uint64_t project_id);
// ─── Change Impact Analysis ─────────────────────────────────────

/**
 * Analyze the impact of code changes across the call graph.
 *
 * @param project_id  The project to analyze.
 * @param modified_files_json  JSON array of modified file paths,
 *                             e.g. '["/path/to/file1.py","/path/to/file2.rs"]'.
 * @return JSON with "modified", "callers", "callees", and "total_impacted".
 */
char *engine_detect_changes(uint64_t project_id,
			    const char *modified_files_json);
/**
 * Get hierarchical module tree for a project.
 * Returns JSON with modules array containing id, parent_id, name, path, file_count.
 */
char *engine_get_module_tree(uint64_t project_id);
/**
 * Find symbol(s) by exact name match.
 * Returns JSON with results array.
 */
char *engine_find_symbol(uint64_t project_id, const char *symbol_name);
// ─── Phase C: Unified MCP Tools (adaptive backend) ────────────

/**
 * Unified search: auto-selects between FTS5 and semantic search.
 * Returns JSON with results and method field indicating which engine was used.
 */
char *engine_unified_search(uint64_t project_id, const char *query, int limit);
/**
 * Find callers (adaptive): uses new call_edges table if callgraph_ready,
 * otherwise falls back to old graph query engine.
 *
 * @param file_filter Optional absolute file path. When non-NULL,
 *        restricts the callee to the given file, disambiguating
 *        homonyms (same name across files/classes). NULL = aggregate
 *        all files (legacy behavior).
 */
char *engine_find_callers_adaptive(uint64_t project_id, const char *symbol_name,
				   const char *file_filter);
/**
 * Find callees (adaptive): uses new call_edges table if callgraph_ready,
 * otherwise falls back to old graph query engine.
 *
 * @param file_filter Optional absolute file path. When non-NULL,
 *        restricts the caller to the given file, disambiguating
 *        homonyms. NULL = aggregate all files (legacy behavior).
 */
char *engine_find_callees_adaptive(uint64_t project_id, const char *symbol_name,
				   const char *file_filter);
/**
 * Get entry points from the new schema.
 */
char *engine_get_entry_points_new(uint64_t project_id);
/**
 * Get a comprehensive project overview: languages, modules, symbols, 
 * entry points, analysis progress, and ready features.
 * This is the first tool AI should call after initialization.
 */
char *engine_project_overview(uint64_t project_id);
/**
 * Trace the shortest call path between two functions using BFS on call_edges.
 * Returns JSON: {"path": [{"name":"...","file":"...","line":N}, ...]}
 * Requires callgraph_ready (run enhance_project first).
 */
char *engine_trace_path(uint64_t project_id, const char *from_name,
			const char *to_name);
// ─── Memory ───────────────────────────────────────────────────

void engine_free_string(char *ptr);
// ─── Missing FFI declarations (v0.2.5 completeness fix) ───────
// These entry points are implemented in the engine and bound by the Rust
// server, but were missing from this header, leaving the header not a
// single source of truth. They are declared here with the exact C ABI the
// Rust ffi layer links against. Each returns a heap-allocated JSON string
// that the caller MUST free via engine_free_string().

/// Run integrity verification (dispatch via VerifierRegistry). Returns JSON.
char *engine_verify_integrity(uint64_t project_id);